--- a/main.html
+++ b/main.html
@@ -8,6 +8,38 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<tr>
+				<th>Roll number</th>
+				<th>Names</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>2205101040014</td>
+				<td>Mishra Ravi Shivshankar</td>
+			</tr>
+			<tr>
+				<td>2205101040033</td>
+				<td>Meena Montu</td>
+			</tr><br>
+			
+			<h1>List of medias</h1>
+		</tbody>
+	</table>
+	<ol>
+		<li><img src="https://picsum.photos/id/123/200/300" alt="Rain"</li>
+		<li><video control>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+			</video>
+		</li>
+		<li>
+			<audio control>
+			<Source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"
+				</audio>
+			</li>
+			</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
