--- a/main.html
+++ b/main.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-
 <html>
-
+	
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
@@ -35,8 +34,8 @@
 			</video>
 		</li>
 		<li>
-			<audio control>
-			<Source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"
+			<audio control src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+			<!-- <Source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" -->
 				</audio>
 			</li>
 			</ol>
