--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
 			</video>
 		</li>
 		<li>
-			<audio control src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+			<audio control src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"
 			<!-- <Source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" -->
 				</audio>
 			</li>
