--- a/main.html
+++ b/main.html
@@ -22,20 +22,20 @@
 			<tr>
 				<td>2205101040033</td>
 				<td>Meena Montu</td>
-			</tr><br>
-			
-			<h1>List of medias</h1>
+			</tr>
 		</tbody>
 	</table>
+	
+	<h1>List of medias</h1>
+
 	<ol>
-		<li><img src="https://picsum.photos/id/123/200/300" alt="Rain"</li>
+		<li><img src="https://picsum.photos/id/123/200/300" alt="Rain"/</li>
 		<li><video control>
-		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"/>
 			</video>
 		</li>
 		<li>
 			<audio control src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"
-			<!-- <Source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" -->
 				</audio>
 			</li>
 			</ol>
